V2.15.9 (Jun 18, 2014)
    * New API "deliver-dict" for delivering dictionaries into DMS
    * Support most popular archive formats including zip, 7z, rar, gzip and etc.

V2.15.8 (May 19, 2014)
    * Allows to sort by T/N/I columns in Translation summary view
    * Optimize performance for importing dictionaries and adding languages

V2.15.7 (Apr 10, 2014)
    * Add option "Secondary Reference" to translation task

V2.15.6 (Apr 4, 2014)
    * Modify XMLDict parser, give "[LABEL]" context to empty reference
    * Not to match glossary which has not been applied yet
    * Fix translation status for TMX dictionary

V2.15.5 (Mar 28, 2014)
    * New dictionary format support: TMX
    * Fix issue of glossary matching

V2.15.4 (Mar 20, 2014)
    * Identify "Auto" translation type by translation history
    * Add "Support" link in login page

V2.15.3 (Mar 5, 2014)
    * Remove "Generated by DMS" headline from generated XML labels and XML properties dictionary
    * New dictionary format support: iOS Resource

v2.15.2 (Feb 28, 2014)
    * Fix issue when there is duplicate label key in delivered dictionary
    * Remove DMS headline in generated DCT dictionary
    * Accept task files with extension "xlsx" when upload

v2.15.1 (Feb 17, 2014)
    * remove association between TranslationHistory and Label in order to delete dictionary
    * Update OTC Excel parser and generator
    * Fix empty max-length issue of new label of DCT

v2.15.0 (Jan 28, 2014)
    * Add "translation" flag and comment field to glossary
    * Add "Preferred translation" tab for reference translation
    * Add "Tip of the day"
    * Add translation history
    * Switch to new LDAP server for authentication
    * Fix issue of generated OTC PC dictionary

V2.14.0 (Dec 27, 2013)
    * New API "generate-dict" for extracting dictionary files from DMS
    * Display date time with client timezone
    * Display user online status in Admin tab
    * Refine glossary matching method, add exception rules